--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=NPC Contact Filter
+author=OldShrimp
+description= Hide unwanted NPCs in the NPC Contact UI
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.npccontactfilter.NPCContactFilterPlugin
